Fix the z-index of the slider

--- a/styles/style.css
+++ b/styles/style.css
@@ -189,7 +189,7 @@ body {
     background: #D9D9D9;
     outline: none;
     border: none;
-    z-index: 2222;
+    z-index: 3;
 }
 
 .size__password--slider--field input::-webkit-slider-thumb {
